@@ -30,13 +30,13 @@ GALLERY_TIME_FORMAT           %Y-%m-%d %H:%M:%S
 # this variable in "myphoto.jpg.vars".
 GALLERY_CONVERT_OPTIONS       -quality 75 -auto-orient
 
-# Define image resizes to be generated.
+# Define images to be generated.
 # Note: type "SCALED" does NOT use the ratio here, since we want our
 # panorama images displayed in full width.
-GALLERY_RESIZE_THUMB          0x180 4:3
-GALLERY_RESIZE_MINITHUMB      0x80  4:3
-GALLERY_RESIZE_SCALED         0x720
-#GALLERY_RESIZE_BIG            2560x1440
+GALLERY_IMAGE_THUMB          0x180 4:3
+GALLERY_IMAGE_MINITHUMB      0x80  4:3
+GALLERY_IMAGE_SCALED         0x720
+#GALLERY_IMAGE_BIG            2560x1440
 
 # Sidecar files with additional EXIF data
 GALLERY_SIDECAR_POSTFIX       .xmp:.XMP
