@@ -72,9 +72,9 @@ next &raquo;
 </div>
 [% ELSE %]
 <div class="gallery_image">
-[% IF GALLERY_RESIZE_BIG_URI || GALLERY_ORIGINAL_URI %]<a href="[% GALLERY_RESIZE_BIG_URI || GALLERY_ORIGINAL_URI %]">[% END %]
-<img src="[% GALLERY_RESIZE_SCALED_URI %]" alt="[% SRC_FILE_NAME %]" width="[% GALLERY_RESIZE_SCALED_WIDTH %]" height="[% GALLERY_RESIZE_SCALED_HEIGHT %]"/>
-[% IF GALLERY_RESIZE_BIG_URI || GALLERY_ORIGINAL_URI %]</a>[% END %]
+[% IF GALLERY_IMAGE_BIG_URI || GALLERY_ORIGINAL_URI %]<a href="[% GALLERY_IMAGE_BIG_URI || GALLERY_ORIGINAL_URI %]">[% END %]
+<img src="[% GALLERY_IMAGE_SCALED_URI %]" alt="[% SRC_FILE_NAME %]" width="[% GALLERY_IMAGE_SCALED_WIDTH %]" height="[% GALLERY_IMAGE_SCALED_HEIGHT %]"/>
+[% IF GALLERY_IMAGE_BIG_URI || GALLERY_ORIGINAL_URI %]</a>[% END %]
 </div>
 [% END %]
 
@@ -84,20 +84,20 @@ next &raquo;
 <table class="prevnext_bottom">
 <tbody>
 <tr>
-<td class="prev" style="width: [% GALLERY_RESIZE_MINITHUMB_MAX_WIDTH %]px; height: [% GALLERY_RESIZE_MINITHUMB_MAX_HEIGHT %]px;">
+<td class="prev" style="width: [% GALLERY_IMAGE_MINITHUMB_MAX_WIDTH %]px; height: [% GALLERY_IMAGE_MINITHUMB_MAX_HEIGHT %]px;">
 [% IF PAGE_PREV %]
 <a href="[% PAGE_PREV.URI %]">
-<div style="width: [% GALLERY_RESIZE_MINITHUMB_MAX_WIDTH %]px; height: [% GALLERY_RESIZE_MINITHUMB_MAX_HEIGHT %]px;">
-<img src="[% PAGE_PREV.GALLERY_RESIZE_MINITHUMB_URI %]" alt="[% PAGE_PREV.GALLERY_RESIZE_MINITHUMB_NAME %]" width="[% PAGE_PREV.GALLERY_RESIZE_MINITHUMB_WIDTH %]" height="[% PAGE_PREV.GALLERY_RESIZE_MINITHUMB_HEIGHT %]"/>
+<div style="width: [% GALLERY_IMAGE_MINITHUMB_MAX_WIDTH %]px; height: [% GALLERY_IMAGE_MINITHUMB_MAX_HEIGHT %]px;">
+<img src="[% PAGE_PREV.GALLERY_IMAGE_MINITHUMB_URI %]" alt="[% PAGE_PREV.GALLERY_IMAGE_MINITHUMB_NAME %]" width="[% PAGE_PREV.GALLERY_IMAGE_MINITHUMB_WIDTH %]" height="[% PAGE_PREV.GALLERY_IMAGE_MINITHUMB_HEIGHT %]"/>
 </div>
 </a>
 [% END %]
 </td>
-<td class="next" style="width: [% GALLERY_RESIZE_MINITHUMB_MAX_WIDTH %]px; height: [% GALLERY_RESIZE_MINITHUMB_MAX_HEIGHT %]px;">
+<td class="next" style="width: [% GALLERY_IMAGE_MINITHUMB_MAX_WIDTH %]px; height: [% GALLERY_IMAGE_MINITHUMB_MAX_HEIGHT %]px;">
 [% IF PAGE_NEXT %]
 <a href="[% PAGE_NEXT.URI %]">
-<div style="width: [% GALLERY_RESIZE_MINITHUMB_MAX_WIDTH %]px; height: [% GALLERY_RESIZE_MINITHUMB_MAX_HEIGHT %]px;">
-<img src="[% PAGE_NEXT.GALLERY_RESIZE_MINITHUMB_URI %]" alt="[ %PAGE_NEXT.GALLERY_RESIZE_MINITHUMB_NAME %]" width="[% PAGE_NEXT.GALLERY_RESIZE_MINITHUMB_WIDTH %]" height="[% PAGE_NEXT.GALLERY_RESIZE_MINITHUMB_HEIGHT %]"/>
+<div style="width: [% GALLERY_IMAGE_MINITHUMB_MAX_WIDTH %]px; height: [% GALLERY_IMAGE_MINITHUMB_MAX_HEIGHT %]px;">
+<img src="[% PAGE_NEXT.GALLERY_IMAGE_MINITHUMB_URI %]" alt="[ %PAGE_NEXT.GALLERY_IMAGE_MINITHUMB_NAME %]" width="[% PAGE_NEXT.GALLERY_IMAGE_MINITHUMB_WIDTH %]" height="[% PAGE_NEXT.GALLERY_IMAGE_MINITHUMB_HEIGHT %]"/>
 </div>
 </a>
 [% END %]
