@@ -26,3 +26,4 @@
   - added FileWiki::Plugin::JavaScript, with minimizing support
   - fixed INCLUDE variable handling
   - added EXIF sidecar support (GALLERY_SIDECAR_POSTFIX variable)
+  - renamed GALLERY_RESIZE_<TYPE> to GALLERY_IMAGE_<TYPE>
